# backend

./: db.sqlite3  pyproject.toml
config/: settings.py
gestao_ecobags/: apps.py
