[project]
name = "backend_mare_verde"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gianlucagadotti", email = "gianlucagadotti@gmail.com"},
]
dependencies = ["django>=4.2.23", "djangorestframework>=3.16.0"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
